--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
-    <groupId>org.jvnet.hudson.plugins</groupId>
+    <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.388</version>
-    <relativePath>../pom.xml</relativePath>
+    <version>1.396</version>
   </parent>
 
-  <groupId>org.jvnet.hudson.plugins</groupId>
   <artifactId>jquery-ui</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
-  <name>Hudson jQuery UI plugin</name>
-  <url>http://wiki.hudson-ci.org/display/HUDSON/jQuery+UI+Plugin</url>
+  <name>Jenkins jQuery UI plugin</name>
+  <url>http://wiki.jenkins-ci.org/display/JENKINS/jQuery+UI+Plugin</url>
 
   <developers>
     <developer>
@@ -23,10 +22,22 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.jvnet.hudson.plugins</groupId>
+      <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>jquery</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>m.g.o-public</id>
+      <url>http://maven.glassfish.org/content/groups/public/</url>
+    </repository>
+  </repositories>
+
+  <scm>
+    <connection>scm:git:git@github.com:jenkinsci/jquery-ui-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/jquery-ui-plugin.git</developerConnection>
+  </scm>
 
 </project>
