--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>jquery-ui</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <name>Jenkins jQuery UI plugin</name>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/jQuery+UI+Plugin</url>
