Move documentation to github

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <version>1.1-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <name>Jenkins jQuery UI plugin</name>
-  <url>http://wiki.jenkins-ci.org/display/JENKINS/jQuery+UI+Plugin</url>
+  <url>https://github.com/jenkinsci/jquery-ui-plugin</url>
 
   <developers>
     <developer>
@@ -31,7 +31,7 @@
   <repositories>
     <repository>
       <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
+      <url>https://repo.jenkins-ci.org/public/</url>
     </repository>
   </repositories>
 
@@ -43,7 +43,7 @@
   <pluginRepositories>
     <pluginRepository>
       <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
+      <url>https://repo.jenkins-ci.org/public/</url>
     </pluginRepository>
   </pluginRepositories>
 
